--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 
     <title>{{ site.title }}</title>
 
+    {% include google-analytics.html %}
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 
