Added next and previous post links

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,5 +23,7 @@ comments: true
         {% endfor %}
     </div>
     <br/>
+    {% include previous-next-post-links.html %}
+    <br/>
     {% include disqus.html %}
 </article>
