Added comments to menu include

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,3 +1,8 @@
+{% comment %}
+    Renders a top navigation menu.
+    Parameters:
+        - uses data.menu (i.e. _data\menu.yml file) to render menu items
+{% endcomment %}
 <nav class="menu">
     <div class="logo">        
         {% comment %}
