Fix for logo color in Opera

--- a/_sass/components/menu.scss
+++ b/_sass/components/menu.scss
@@ -72,6 +72,7 @@ $menu-font-line-height: 2.5rem;
     }
 
     .logo__title {
+        color: $logo-color;
         display: block;
         padding-left: .3em;
     }
