--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 {% seo %}
 
-<title>{{page.title}} | {{ site.title }}</title>
+<title>{{page.title}}</title>
 
 {% include google-analytics.html %}
 
