Increase bottom-margin for post title

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -135,7 +135,7 @@ a {
 
 // Style for headers that are page titles, remove margins, leave visual compensation for a title (small negative left margin)
 .page-title {
-    margin: 0 0 -.1rem -.1rem;
+    margin: 0 0 .6rem -.1rem;
 }
 
 // Style for additional information. Less intensive in color and smaller than the regular text;
