--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ comments: true
     <h1 class="page-title">
         {{ page.title }}
     </h1>
+    {% include post-series.html %}
     {{ content }}
     <br/>
     <br/>
@@ -23,6 +24,14 @@ comments: true
         {% endfor %}
     </div>
     <br/>
+
+    
+
+    {% comment %}
+    {% include social-buttons.html %}
+    <br/>
+    {% endcomment %}
+
     {% include previous-next-post-links.html %}
     <br/>
     {% include disqus.html %}
