Add active link color

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -11,6 +11,7 @@ $link-color: #005ea5;
 $link-color-visited: #5c005c;
 $link-color-hover: #a80000;
 $link-color-focus: #ffbf47;
+$link-color-active: #ea4300;
 
 $text-font-size: 1rem;
 $tertiary-info-font-size: .8 * $text-font-size;
