--- a/css/main.scss
+++ b/css/main.scss
@@ -16,3 +16,4 @@
 @import "./components/menu";
 @import "./components/posts-list";
 @import "./components/previous-next-post-links";
+@import "./components/post-series";
