--- a/_sass/components/post-series.scss
+++ b/_sass/components/post-series.scss
@@ -16,6 +16,10 @@
     }
 
     @media screen and (min-width: $breakpoint-small) {
+        ol {
+            margin-left: 0.6rem;
+        }
+
         li {
             display: inline;
         }
