--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,24 +8,14 @@ comments: true
     <h1 class="page-title">
         {{ page.title }}
     </h1>
+
     {% include post-series.html %}
+
     {{ content }}
-    <br/>
-    <br/>
-    <div class="tertiary-info"
-        <date>
-            {{ page.date | date: "%B %d, %Y"}}
-        </date> in 
-        {% for tag in page.tags %}
-            {{ tag }}
-            {% if forloop.last == false %}
-                ,
-            {% endif %}
-        {% endfor %}
-    </div>
-    <br/>
+    
+    {% include post-meta-info.html %}
 
     {% include previous-next-post-links.html %}
-    <br/>
+
     {% include disqus.html %}
 </article>
