Add social networks sharing buttons

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,3 +17,5 @@
 @import "./components/posts-list";
 @import "./components/previous-next-post-links";
 @import "./components/post-series";
+@import "./components/social-buttons";
+@import "./components/post-meta-info";
