--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@ comments: true
     
     {% include post-meta-info.html %}
 
+    {% include social-buttons.html %}
+
     {% include previous-next-post-links.html %}
 
     {% include disqus.html %}
