--- a/_sass/components/previous-next-post-links.scss
+++ b/_sass/components/previous-next-post-links.scss
@@ -1,6 +1,7 @@
 .previous-next-post-links {
     display: flex;
     flex-direction: row;
+    padding-bottom: 2rem;
 
     font-size: $tertiary-info-font-size;
 
