Add Reddit Submit link

--- a/_sass/components/social-buttons.scss
+++ b/_sass/components/social-buttons.scss
@@ -82,4 +82,14 @@
             }
         }
     }
+
+    .reddit {
+        &:hover {
+            color: #FF4500;
+
+            svg path {
+                fill: #FF4500;
+            }
+        }
+    }
 }
