Add rss subscribe and twitter link in the footer

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -41,5 +41,11 @@ body {
 }
 
 .footer {
-    height: 2rem;
+    height: 3rem;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+
+    padding-bottom: 1rem;
 }
