--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 */
 @import "blog";
 
+@import "./components/footer";
 @import "./components/menu";
 @import "./components/posts-list";
 @import "./components/previous-next-post-links";
