--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,35 @@
 <footer class="footer">
-    &copy; 2017 {{ site.author }}
+    <div class="footer--section">
+        &copy; 2017 {{ site.author }}
+    </div>
+    <div class="footer--section">
+        {% comment %} Add feed subscribe link {% endcomment %}
+        <a href="{{ site.url }}/feed.xml">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 520 520"
+                class="footer--icon" xml:space="preserve">
+                <path d="M176.7,385c0-11.5-4.1-21.3-12.2-29.5c-8.1-8.1-18-12.2-29.5-12.2c-11.5,0-21.3,4.1-29.5,12.2c-8.1,8.1-12.2,18-12.2,29.5
+                    s4.1,21.3,12.2,29.5c8.1,8.1,18,12.2,29.5,12.2c11.5,0,21.3-4.1,29.5-12.2C172.6,406.3,176.7,396.5,176.7,385z M290.9,415.6
+                    c-2.8-50.6-22-93.6-57.5-129.1s-78.5-54.6-129.1-57.5c-3-0.2-5.6,0.8-7.8,2.9c-2.2,2.2-3.3,4.7-3.3,7.5v41.7c0,2.8,0.9,5.2,2.8,7.2
+                    c1.8,2,4.2,3,7,3.3c33.4,2.4,62.1,15.5,85.9,39.4c23.9,23.9,37,52.5,39.4,85.9c0.2,2.8,1.3,5.2,3.3,7s4.3,2.8,7.2,2.8h41.7
+                    c2.8,0,5.3-1.1,7.5-3.3C290.2,421.2,291.1,418.6,290.9,415.6z M415.9,415.9c-1.1-33.4-7.2-65.7-18.2-96.8s-26.2-59.4-45.4-84.6
+                    s-41.4-47.5-66.7-66.7s-53.5-34.3-84.6-45.4s-63.4-17.1-96.8-18.2c-3-0.2-5.5,0.8-7.5,2.9c-2.2,2.2-3.3,4.7-3.3,7.5v41.7
+                    c0,2.8,1,5.2,2.9,7.2s4.3,3,7.2,3.3c44.3,1.5,85.3,13.6,123,36.3s68,52.9,90.7,90.7s34.8,78.8,36.3,123c0.2,2.8,1.3,5.2,3.3,7.2
+                    s4.3,2.9,7.2,2.9h41.7c2.8,0,5.3-1.1,7.5-3.3C415.4,421.5,416.4,419,415.9,415.9z M510,103.8v312.5c0,25.8-9.2,47.9-27.5,66.2
+                    c-18.3,18.3-40.4,27.5-66.2,27.5H103.8c-25.8,0-47.9-9.2-66.2-27.5C19.2,464.2,10,442.1,10,416.2V103.8c0-25.8,9.2-47.9,27.5-66.2
+                    S77.9,10,103.8,10h312.5c25.8,0,47.9,9.2,66.2,27.5C500.8,55.8,510,77.9,510,103.8z" />
+            </svg>
+            Subscribe
+        </a>
+    </div>
+    <div class="footer--section">
+        {% comment %} Add Twitter account link {% endcomment %}
+        <a href=https://twitter.com/{{site.twitter_username}}>
+            <svg viewBox="0 0 400 400" class="footer--icon">
+                <rect style="fill: none;" width="400" height="400" />
+                <path d="m 130.80073,363.62382 c 143.6343,0 222.1962,-118.99997 222.1962,-222.19619 0,-3.37999 0,-6.74475 -0.22837,-10.09429 A 158.88992,158.88992 0 0 0 391.72978,90.910492 155.87534,155.87534 0 0 1 346.87641,103.19721 78.363976,78.363976 0 0 0 381.20918,60.003388 156.49957,156.49957 0 0 1 331.62079,78.95873 78.166048,78.166048 0 0 0 198.53753,150.18209 221.709,221.709 0 0 1 37.592211,68.590386 78.150824,78.150824 0 0 0 61.769789,172.83717 77.511366,77.511366 0 0 1 26.325582,163.06259 c 0,0.31973 0,0.65468 0,0.98964 a 78.120373,78.120373 0 0 0 62.651595,76.55218 77.968122,77.968122 0 0 1 -35.261505,1.33981 78.181273,78.181273 0 0 0 72.959028,54.23207 156.6975,156.6975 0 0 1 -96.984354,33.49539 158.96606,158.96606 0 0 1 -18.589939,-1.12666 221.08477,221.08477 0 0 0 119.700323,35.0179"
+                />
+            </svg>
+            Twitter
+        </a>
+    </div>
 </footer>
