Add youtube embeded played

--- a/css/main.scss
+++ b/css/main.scss
@@ -20,3 +20,4 @@
 @import "./components/post-series";
 @import "./components/social-buttons";
 @import "./components/post-meta-info";
+@import "./components/youtube";
