--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer--section">
-        &copy; 2017 {{ site.author }}
+        &copy; 2017–2018 {{ site.author }}
     </div>
     <div class="footer--section">
         {% comment %} Add feed subscribe link {% endcomment %}
