--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
 {% comment %}
     Adds Disqus comments for the site.
 
-    Checks whether the environment variable is "production" to render the snippet, otherwise renders a waring comment.    
+    Checks whether the environment variable is "production" to render the snippet, otherwise renders a waring comment.
     Requires comments: true value in the page's YAML header, otherwise renders a warning.
 
     The include should be added where the commenting sectiong should appear,
@@ -12,23 +12,9 @@
 {% if site.disqus.shortname %}
     {% if jekyll.environment == "production" %}
         {% if page.comments != false %}
-            <div id="disqus_thread"></div>
-            <script>
-                var disqus_config = function () {
-                    this.page.url = "{{ site.url }}{{ page.url }}";
-                    this.page.identifier = "{{ site.url }}{{ page.url }}";
-                };
-
-                (function() {
-                    var d = document, s = d.createElement('script');
-                    s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            <div class="disqus"></div>
         {% else %}
-            <!-- Comments are disabled for this post. -->    
+            <!-- Comments are disabled for this post. -->
         {% endif %}
     {% else %}
         <!-- jekyll.environment variable is "{{ jekyll.environment }}" and not "production", Disqus snippet will be skipped. -->
