Add optimized logo

--- a/_sass/components/menu.scss
+++ b/_sass/components/menu.scss
@@ -67,7 +67,7 @@ $menu-font-line-height: 2.5rem;
         height: $logo-size;
         border-radius: 50%;
 
-        background: url("../assets/logo.png") no-repeat center center;
+        background: url("../assets/logo.jpg") no-repeat center center;
         background-size: contain;
     }
 
