--- a/_includes/posts-list.html
+++ b/_includes/posts-list.html
@@ -1,29 +1,29 @@
-{% comment %}
-    Shows a list of posts.
-    Parameters:
-        - title - title to display for a list;
-        - posts - list of posts to display. This can be site.posts or a filtered/sorted version of this list;
-        - postsToShow - optional number of posts to display. If not specified, all posts will be shown.
-{% endcomment %}
+{% comment %} Shows a list of posts. Parameters: - title - title to display for a list; - posts - list of posts to display.
+This can be site.posts or a filtered/sorted version of this list; - postsToShow - optional number of posts to display. If
+not specified, all posts will be shown. {% endcomment %}
 <div class="posts-list">
     <h2>
         {{ include.title }}
     </h2>
     <ul class="posts-list__items">
         {% for post in include.posts %}
-            <li>
-                <a href="{{ post.url }}">
+        <li class="posts-list__item">
+            <div>
+                <a class="post-list__title" href="{{ post.url }}">
                     {{ post.title }}
                 </a>
                 &nbsp;
                 <date class="tertiary-info">
                     {{ post.date | date: "%B %d, %Y"}}
                 </date>
-            </li>
-
-            {% if include.postsToShow != nil and forloop.index == include.postsToShow %}
-                {% break %}
+            </div>
+            {% if post.image != nil %}
+            <a class="post-list__title" href="{{ post.url }}">
+                <img class="post-list__image" src="{{ post.image }}" />
+            </a>
             {% endif %}
-        {% endfor %}
+        </li>
+
+        {% if include.postsToShow != nil and forloop.index == include.postsToShow %} {% break %} {% endif %} {% endfor %}
     </ul>
 </div>
