--- a/css/main.scss
+++ b/css/main.scss
@@ -23,3 +23,4 @@
 @import "./components/social-buttons";
 @import "./components/post-meta-info";
 @import "./components/youtube";
+@import "./components/about-me.scss";
