--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
 <link href="/css/main.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans" rel="stylesheet">
 
+<link href="{{site.baseUrl}}/assets/favico.png" rel="icon" type="image/x-icon" />
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
