--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 {% include google-analytics.html %}
 
-<link href="/css/main.css" rel="stylesheet">
+<link href="/css/main.css?v={{site.time | date: '%s'}}" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans" rel="stylesheet">
 
 <link href="{{site.baseUrl}}/assets/favico.png" rel="icon" type="image/x-icon" />
