Change text typeface from Open Sans to PT Sans

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 {% include google-analytics.html %}
 
 <link href="/css/main.css?v={{site.time | date: '%s'}}" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cabin|PT+Serif" rel="stylesheet">
 
 <link href="{{site.baseUrl}}/assets/favico.png" rel="icon" type="image/x-icon" />
 
