--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -2,7 +2,7 @@
     Variables
 */
 $display-font: "Cabin", sans-serif;
-$text-font: "Open Sans", sans-serif;
+$text-font: "PT Serif", serif;
 
 $header-color: #000;
 $text-color: rgba(0, 0, 0, .9);
