--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,57 +1,62 @@
 {% comment %}
-    Renders a top navigation menu.
-    Parameters:
-        - uses data.menu (i.e. _data\menu.yml file) to render menu items
+Renders a top navigation menu.
+Parameters:
+- uses data.menu (i.e. _data\menu.yml file) to render menu items
 {% endcomment %}
 <nav class="menu">
     <div class="logo">
         {% comment %}
-            Check whether the current page is a home page:
-            - yes - do not render a link to itself;
-            - no - render a link to a home page.
+        Check whether the current page is a home page:
+        - yes - do not render a link to itself;
+        - no - render a link to a home page.
         {% endcomment %}
 
         {% if page.url == "/" %}
+        <a class="logo__link">
             <div class="logo__image"></div>
             <div class="logo__title logo__title--active">
                 {{ site.author }}
             </div>
+        </a>
         {% else %}
-            <a href="/" class="logo__link">
-                <div class="logo__image"></div>
-                <div class="logo__title">
-                    {{ site.author }}
-                </div>
-            </a>
+        <a href="/" class="logo__link">
+            <div class="logo__image"></div>
+            <div class="logo__title">
+                {{ site.author }}
+            </div>
+        </a>
         {% endif %}
     </div>
 
     <div class="menu-primary">
         <ul class="menu__items">
             {% for item in site.data.menu %}
-                <li>
-                    {% if item.disabled == true %}
-                        <a class="menu__item menu__item--disabled">{{ item.title }}</a>
+            <li>
+                {% if item.disabled == true %}
+                    <a class="menu__item menu__item--disabled">{{ item.title }}</a>
+                {% else %}
+                {% comment %}
+                Logic to highlight menu items in a menu.
+
+                Split the current page url with the menu item url, and check the size of the array:
+                - if size is 0 - the current page url is the same as menu item url: highlight menu item, but do not make
+                item a link. E.g. "/blog/" and "/blog/".
+                - if size is 1 - the current page url is not related to the menu item url: do not highlight menu item,
+                render menu item as a link. E.g. "/blog/" and "/projects/".
+                - else - the current page url is under the menu item url: highlight menu item, and render menu item as a
+                link. E.g. "/blog/" and "/blog/post1/".
+                {% endcomment %}
+
+                    {% assign urlPartsSize = (page.url | split: item.url) | size %}
+                    {% if urlPartsSize == 0 %}
+                        <a class="menu__item menu__item--active">{{ item.title }}</a>
+                    {% elsif urlPartsSize == 1 %}
+                        <a href="{{ item.url }}" class="menu__item">{{ item.title }}</a>
                     {% else %}
-                        {% comment %}
-                        Logic to highlight menu items in a menu.
-
-                        Split the current page url with the menu item url, and check the size of the array:
-                            - if size is 0 - the current page url is the same as menu item url: highlight menu item, but do not make item a link. E.g. "/blog/" and "/blog/".
-                            - if size is 1 - the current page url is not related to the menu item url: do not highlight menu item, render menu item as a link. E.g. "/blog/" and "/projects/".
-                            - else - the current page url is under the menu item url: highlight menu item, and render menu item as a link. E.g. "/blog/" and "/blog/post1/".
-                        {% endcomment %}
-
-                        {% assign urlPartsSize = (page.url | split: item.url) | size %}
-                        {% if urlPartsSize == 0 %}
-                            <a class="menu__item menu__item--active">{{ item.title }}</a>
-                        {% elsif urlPartsSize == 1 %}
-                            <a href="{{ item.url }}" class="menu__item">{{ item.title }}</a>
-                        {% else %}
-                            <a href="{{ item.url }}" class="menu__item menu__item--active">{{ item.title }}</a>
-                        {% endif %}
+                        <a href="{{ item.url }}" class="menu__item menu__item--active">{{ item.title }}</a>
                     {% endif %}
-                </li>
+                {% endif %}
+            </li>
             {% endfor %}
         </ul>
     </div>
