--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,8 +1,7 @@
 {% comment %}
-
     Renders embeded youtube video.
-
-    Parameters: - url
+    Parameters:
+        - id - id of the video
 
 {% endcomment %}
 
