Change About page

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -21,10 +21,8 @@
     </p>
 
     <p>
-        I live in Minsk, Belarus.
-        <br/> You can email me at
-        <a href="mailto:{{site.email}}">{{site.email}}</a>, reach me in
-        <a href="https://www.linkedin.com/in/{{site.linkedin_username}}/">LinkedIn</a>, or tweet me at
-        <a href="https://twitter.com/{{site.twitter_username}}">@{{site.twitter_username}}</a>.
+        I live in Minsk, Belarus <a href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
+        <br/>
+        {% include contact-details.html %}
     </p>
 </article>
