Make active menu color more accessible

--- a/_sass/components/menu.scss
+++ b/_sass/components/menu.scss
@@ -1,7 +1,7 @@
 $menu-item-color: #005ea5;
 $menu-item-color-hover: $link-color-hover;
 $menu-item-color-focus: $link-color-focus;
-$menu-item-color-active: #ea4300;
+$menu-item-color-active: #d33c00;
 
 $menu-font-size: 1rem;
 $menu-font-line-height: 2.5rem;
