--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -11,7 +11,7 @@ $link-color: #005ea5;
 $link-color-visited: #5c005c;
 $link-color-hover: #a80000;
 $link-color-focus: #ffbf47;
-$link-color-active: #ea4300;
+$link-color-active: #d33c00;
 
 $text-font-size--small: .8rem;
 $text-font-size--medium: 1rem;
