--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -180,6 +180,20 @@ a {
     text-decoration: none
 }
 
+.link--primary {
+    font-weight: bold;
+}
+
+.link--action {
+    padding: .5em 1em .5em 1em !important;
+    border: 1px solid $link-color-focus;
+    border-radius: 5px;
+
+    &:focus {
+        border-radius: 0;
+    }
+}
+
 // Style to limit the width of a code highlight, adds horizontal scroll, when a code is longer that 100% width.
 figure.highlight {
     overflow-x: auto;
