Change about me section

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,3 +24,4 @@
 @import "./components/post-meta-info";
 @import "./components/youtube";
 @import "./components/about-me.scss";
+@import "./components/about-me-short.scss";
