--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -13,7 +13,7 @@
 
     <p>
         For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking, and telecom
-        industries. I've been working as a developer, architect, and a consultant.
+        industries. I've been working as a developer, architect, and consultant.
     </p>
 
     <p>
@@ -21,7 +21,7 @@
     </p>
 
     <p>
-        I live in Minsk, Belarus <a href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
+        I live in Minsk, Belarus <a class="link--no-decoration" href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
         <br/>
         {% include contact-details.html %}
     </p>
