--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,8 @@
     Components
 */
 @import "blog";
+@import "services";
+@import "intranet-configuration";
 
 @import "./components/footer";
 @import "./components/menu";
