--- a/_sass/components/posts-list.scss
+++ b/_sass/components/posts-list.scss
@@ -11,12 +11,18 @@
     }
 
     .post-list__title {
+        display: block;
+
         font-size: .85rem;
         line-height: 1.15rem;
         font-weight: 400;
+
+        padding-bottom: .5rem;
     }
 
     .post-list__image {
+        display: block;
+
         width: 100%;
         height: auto;
 
