Update about me

--- a/_includes/about-me-short.html
+++ b/_includes/about-me-short.html
@@ -1,9 +1,15 @@
 <article class="about-me-short">
-        <p>
-            My name is Dmitry Rogozhny. I am a software developer.
-            <br>
-            I can <a class="intanet-configuration-service-link" href="{{site.baseUrl}}/services/intranet-configuration/">configure your SharePoint intranet</a> or do <a class="custom-development-service-link" href="{{site.baseUrl}}/services/development/">custom Office 365 development</a>.
-            <br>
-            {% include contact-details.html %}
-        </p>
+    <p>
+        I am a full stack developer specializing in SharePoint and Office 365.
+    <br>
+        I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
+    </p>
+    <p>
+        I can <a class="intanet-configuration-service-link"
+            href="{{site.baseUrl}}/services/intranet-configuration/">configure your SharePoint intranet</a> and do <a
+            class="custom-development-service-link" href="{{site.baseUrl}}/services/development/">custom Office 365
+            development</a>.
+        <br>
+        {% include contact-details.html %}
+    </p>
 </article>
