--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -3,17 +3,18 @@
         Hi! My name is Dmitry Rogozhny.
     </p>
     <p>
-        I am a software developer.
+        I am a full stack developer specializing in SharePoint and Office 365.
+        I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
     </p>
 
     <p>
-        I help companies to implement complex web and enterprise applications. I have experience in building intranets and extranets,
-        content and document management solutions, portfolio and project management systems, BI and reporting tools.
+        I have got experience in building intranets and extranets, content and document management solutions, portfolio
+        and project management systems, BI and reporting tools.
     </p>
 
     <p>
-        For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking, and telecom
-        industries. I've been working as a developer, architect, and consultant.
+        For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking,
+        and telecom industries. I am working as a developer, architect, and consultant.
     </p>
 
     <p>
@@ -21,8 +22,9 @@
     </p>
 
     <p>
-        I live in Minsk, Belarus <a class="link--no-decoration" href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
-        <br/>
+        I live in Minsk, Belarus <a class="link--no-decoration"
+            href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
+        <br />
         {% include contact-details.html %}
     </p>
 </article>
