Update about me

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -4,23 +4,15 @@
     </p>
     <p>
         I am a full stack developer specializing in SharePoint and Office 365.
+    </p>
+    <p>
         I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
     </p>
-
     <p>
         I have got experience in building intranets and extranets, content and document management solutions, portfolio
-        and project management systems, BI and reporting tools.
-    </p>
-
-    <p>
-        For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking,
+        and project management systems, BI and reporting tools. For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking,
         and telecom industries. I am working as a developer, architect, and consultant.
     </p>
-
-    <p>
-        I like learning new things and I like helping others to learn.
-    </p>
-
     <p>
         I live in Minsk, Belarus <a class="link--no-decoration"
             href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
