Fix nesting <p> tags

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -10,13 +10,13 @@
     </p>
     <p>
         I have got experience in building intranets and extranets, content and document management solutions, portfolio
-        and project management systems, BI and reporting tools. For over 10 years, I've had a pleasure of delivering projects for companies in oil&#8239;&&#8239;gas, banking,
+        and project management systems, BI and reporting tools. For over 10 years, I've had a pleasure of delivering
+        projects for companies in oil&#8239;&&#8239;gas, banking,
         and telecom industries. I am working as a developer, architect, and consultant.
     </p>
     <p>
         I live in Minsk, Belarus <a class="link--no-decoration"
             href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
-        <br />
-        {% include contact-details.html %}
     </p>
+    {% include contact-details.html %}
 </article>
