Add short space for office 365, remove nesting <p>

--- a/_includes/about-me-short.html
+++ b/_includes/about-me-short.html
@@ -1,13 +1,13 @@
 <article class="about-me-short">
     <p>
-        I am a full stack developer specializing in SharePoint and Office 365.
+        I am a full stack developer specializing in SharePoint and Office&#8239;365.
         <br>
-        I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
+        I work with SharePoint and Office&#8239;365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
     </p>
     <p>
         I can <a class="intanet-configuration-service-link"
             href="{{site.baseUrl}}/services/intranet-configuration/">configure your SharePoint intranet</a> and do <a
-            class="custom-development-service-link" href="{{site.baseUrl}}/services/development/">custom Office 365
+            class="custom-development-service-link" href="{{site.baseUrl}}/services/development/">custom Office&#8239;365
             development</a>.
         <br>
     </p>
