--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -3,10 +3,10 @@
         Hi! My name is Dmitry Rogozhny.
     </p>
     <p>
-        I am a full stack developer specializing in SharePoint and Office 365.
+        I am a full stack developer specializing in SharePoint and Office&#8239;365.
     </p>
     <p>
-        I work with SharePoint and Office 365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
+        I work with SharePoint and Office&#8239;365 APIs, Azure, TypeScript/JavaScript, Node.js, and React.
     </p>
     <p>
         I have got experience in building intranets and extranets, content and document management solutions, portfolio
