--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@
 @import "blog";
 @import "services";
 @import "intranet-configuration";
+@import "development";
 
 @import "./components/footer";
 @import "./components/menu";
