Fix html5 validation warning, no header in article

--- a/_includes/about-me-short.html
+++ b/_includes/about-me-short.html
@@ -1,4 +1,4 @@
-<article class="about-me-short">
+<div class="about-me-short">
     <p>
         I am a full stack developer specializing in SharePoint and Office&#8239;365.
         <br>
@@ -12,4 +12,4 @@
         <br>
     </p>
     {% include contact-details.html %}
-</article>
+</div>
