--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,4 +1,4 @@
-<article class="about-me">
+<div class="about-me">
     <p>
         Hi! My name is Dmitry Rogozhny.
     </p>
@@ -19,4 +19,4 @@
             href="https://www.google.com/maps/place/Minsk/@51.5581949,19.5820437,5.53z">🌍</a>.
     </p>
     {% include contact-details.html %}
-</article>
+</div>
