--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -15,7 +15,7 @@ $link-color-active: #d33c00;
 
 // colors for custom links for services
 $intranet-configuration-service-color: #d83b01;
-$custom-development-service-color: #9b0062;
+$custom-development-service-color: #06785f;
 
 $text-font-size--small: .8rem;
 $text-font-size--medium: 1rem;
